// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NonNativeSelectOption renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      data-highlighted="false"
      role="option"
      tabindex="-1"
      value=""
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="w-4 inline-flex mr-2"
            />
            <span
              class="flex-1 text-md leading-5"
            >
              Test
            </span>
          </div>
          <div
            class="text-2xs mt-1 text-graphite ml-6"
          >
            Test description
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`NonNativeSelectOption sets attributes correctly 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
      data-highlighted="false"
      role="option"
      tabindex="-1"
      value="option1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="w-4 inline-flex mr-2"
            >
              <svg
                class="PicassoSvgCheckMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m6.5 9.793 4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2Z"
                />
              </svg>
            </div>
            <span
              class="flex-1 text-md leading-5 text-semibold"
            >
              Test
            </span>
          </div>
          <div
            class="text-2xs mt-1 text-graphite ml-6"
          >
            Test description
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
